# tookio_shop

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tookio_shop/: api.py  hooks.py  modules.txt  utils.py
tookio_shop/fixtures/: custom_docperm.json  workspace.json
tookio_shop/tookio_shop/custom/: customer.json  packed_item.json  sales_invoice.json  sales_invoice_item.json  subscription_plan.json
tookio_shop/tookio_shop/dashboard_chart/daily_sales/: daily_sales.json
tookio_shop/tookio_shop/dashboard_chart/highest_selling_products/: highest_selling_products.json
tookio_shop/tookio_shop/dashboard_chart/item_profit_analysis/: item_profit_analysis.json
tookio_shop/tookio_shop/dashboard_chart/monthly_profit/: monthly_profit.json
tookio_shop/tookio_shop/dashboard_chart/sales/: sales.json
tookio_shop/tookio_shop/doctype/m_pesa_transaction/: m_pesa_transaction.js  m_pesa_transaction.json  m_pesa_transaction.py  test_m_pesa_transaction.py
tookio_shop/tookio_shop/doctype/product/: product.js  product.json  product.py  test_product.py
tookio_shop/tookio_shop/doctype/product_stock/: product_stock.js  product_stock.json  product_stock.py  test_product_stock.py
tookio_shop/tookio_shop/doctype/product_stock_item/: product_stock_item.json  product_stock_item.py
tookio_shop/tookio_shop/doctype/sale_invoice/: sale_invoice.js  sale_invoice.json  sale_invoice.py  test_sale_invoice.py
tookio_shop/www/checkout/: index.html  index.py
tookio_shop/www/payment-callback/: index.html  index.py
tookio_shop/www/subscriptions/: index.html  index.py
(+32 files in other folders)
